# IbEverythingExt

./: .gitignore  CMakeLists.txt  Cargo.toml  IbEverythingExt.sln  LICENSE.txt  README.en.md  README.md
.cargo/: config.toml
.github/: FUNDING.yml
EverythingExt/: EverythingExt.vcxproj  EverythingExt.vcxproj.filters  PinyinSearch.cpp  PinyinSearch.hpp  PinyinSearchEdit.cpp  PinyinSearchPcre.cpp  PinyinSearchPcre.hpp  common.hpp  config.cpp  config.hpp  dllmain.cpp  ffi.h  framework.h  helper.cpp  ipc.hpp  ipc_window.cpp  ipc_window.hpp  match.cpp  match.hpp  pinyin.cpp  pinyin.hpp  quick_select.cpp  resource.rc  search_history.cpp  search_history.hpp  toupper_gen.py
Hijacker/: Hijacker.rc  Hijacker.vcxproj  Hijacker.vcxproj.filters  PinyinSearch.cpp  PinyinSearch.hpp  PinyinSearchEdit.cpp  PinyinSearchPcre.cpp  PinyinSearchPcre.hpp  config.cpp  config.hpp  dllmain.cpp  helper.hpp  ipc.cpp  ipc.hpp  ipc_window.cpp  ipc_window.hpp  match.cpp  match.hpp  pinyin.cpp  pinyin.hpp  pinyin_data.cpp  quick_select.cpp  quick_select.hpp  resource.h  search_history.cpp
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  common.hpp  match.cpp  test.cpp  v1.4.cpp  v1.5a.cpp
Updater/: Updater.vcxproj  Updater.vcxproj.filters  updater.cpp
data/: generate.py  generate_a-z_regex.py  generate_ord_pinyin.py
docs/: development.md
docs/pinyin_search/: edit_mode.md
loader/: dllmain.cpp  framework.h  loader.vcxproj
plugin/: Cargo.toml  build.rs  cbindgen.ps1
plugin/locales/: home.yaml  lib.yaml  quick_select.yaml  shell.yaml
plugin/src/: ffi.rs  lib.rs
plugin/src/home/: mod.rs  options.rs
plugin/src/pinyin/: mod.rs  options.rs
plugin/src/quick_select/: mod.rs  options.rs
plugin/src/romaji/: mod.rs  options.rs
plugin/src/search/: config.rs  mod.rs
plugin/src/shell/: mod.rs  options.rs
publish/: publish-14.ps1  publish-15.ps1  publish.ps1
publish/IbEverythingExt/: GitHub.url  config.yaml
sig/: Cargo.toml
sig/src/: lib.rs
source/: PinyinSearch.cpp  PinyinSearch.hpp  PinyinSearchEdit.cpp  PinyinSearchEdit.hpp  PinyinSearchPcre.cpp  config.cpp  config.hpp  dllmain.cpp  helper.cpp  helper.hpp  ipc.cpp  ipc_window.cpp  match.cpp  pinyin.cpp  quick_select.cpp  quick_select.hpp  resource.rc  search_history.cpp
test/: common.hpp  main.cpp  match.cpp  pcre.cpp  test.vcxproj  test.vcxproj.filters
update/: update.cpp
