[package]
name = "plugin"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "IbEverythingExt"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
serde_yaml_ng = "0.10"
sig.workspace = true

[dependencies.everything-plugin]
version = "0.2"
git = "https://github.com/Chaoses-Ib/IbEverythingLib"
rev = "faaf0aa420a3d6fb90529475fc3cfda3298276e6"

[dependencies.ib-matcher]
version = "0.3"
features = ["pinyin", "romaji"]
git = "https://github.com/Chaoses-Ib/ib-matcher"
rev = "9dfb5c3ab5d41efbe98cabf2c730dc38bd7ec139"

[build-dependencies]
vcpkg = "0.2.15"
winres = "0.1"
