[package]
name = "plugin"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "IbEverythingExt"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2"
rust-i18n = "3"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
serde_yaml_ng = "0.10"
sig.workspace = true

[dependencies.everything-plugin]
version = "0.3"
features = ["rust-i18n"]
git = "https://github.com/Chaoses-Ib/IbEverythingLib"
rev = "f3b986e883fb8b8d1e3da8047cd2f6391d5b4a16"

[dependencies.ib-matcher]
version = "0.4"
features = ["pinyin", "romaji", "syntax", "regex"]
# git = "https://github.com/Chaoses-Ib/ib-matcher"
# rev = "2fc6298be0fce2ca4f11233c7a929c8e0ba1e2e7"

[build-dependencies]
vcpkg = "0.2.15"
winres = "0.1"
